# VK-API

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  VKAPIConfig.cmake.in  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: action.yml  cmake_github.yml  macos.yml  ubuntu.yml  windows.yml
examples/: CMakeLists.txt
examples/1/: CMakeLists.txt  main.cpp
examples/2/: CMakeLists.txt  main.cpp
include/: Bot.hpp  BotBase.hpp  ClientBase.hpp  Config.hpp  Config.hpp.in  Defines.hpp  Exceptions.hpp  Optional.hpp  Request.hpp  Types.hpp  User.hpp  UserBase.hpp  Utilities.hpp  VKAPI.hpp  pch.hpp
include/curl/: curl.h
lib/: libcurl.lib
lib/cmake/: vkapiConfig-release.cmake  vkapiConfig.cmake
src/: Bot.cpp  BotBase.cpp  ClientBase.cpp  Request.cpp  User.cpp  UserBase.cpp  Utilities.cpp
submodules/: install.cmake
